--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Coach_Is_Here</title>
+  <meta name="description" content="Your Coach is here. I will help you to learn new things" />
 </head>
 
 <body>
